[package]
name = "uavcan_bridge"
version = "0.1.0"
authors = ["Luca Di Sera <disera.luca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uavcan = { git = "https://github.com/romixlab/uavcan.git" }

[dev-dependencies]
crc-any = { version = "2.3", default-features = false }
